// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> align should render a center aligned button if align=center 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 fsjcxB"
  >
    <button
      class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 iRurrc"
      data-testid="ds-button"
      type="button"
    >
      <div
        class="Textweb__Text-sc-6jf9e4-0 dxOYOr"
        color="light.900"
        data-testid="ds-text"
      >
        Click Me
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> align should render a left aligned button if align=left 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 fsjcxB"
  >
    <button
      class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
      data-testid="ds-button"
      type="button"
    >
      <div
        class="Textweb__Text-sc-6jf9e4-0 dxOYOr"
        color="light.900"
        data-testid="ds-text"
      >
        Click Me
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> align should render a right aligned button if align=right 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 fsjcxB"
  >
    <button
      class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 cYvmMG"
      data-testid="ds-button"
      type="button"
    >
      <div
        class="Textweb__Text-sc-6jf9e4-0 dxOYOr"
        color="light.900"
        data-testid="ds-text"
      >
        Click Me
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> block should render a block button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 gBCsZh Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 hBDZyG"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 dxOYOr"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> disabled should render a disabled button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 oflLr Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    data-testid="ds-button"
    disabled=""
    type="button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 fTtHfx"
      color="light.950"
      data-testid="ds-text"
    >
      Disabled Button
    </div>
  </button>
</div>
`;

exports[`<Button /> icon with children with icon left should render a button with icon on left 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    data-testid="ds-button"
    type="button"
  >
    <svg
      class="Spaceweb__Space-njatzl-0 fIWTfg"
      data-testid="ds-icon"
      fill="rgba(255, 255, 255, 1.0)"
      height="20"
      viewBox="0 0 24 24"
      width="20"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
      />
    </svg>
    <div
      class="Textweb__Text-sc-6jf9e4-0 dxOYOr"
      color="light.900"
      data-testid="ds-text"
    >
      Button
    </div>
  </button>
</div>
`;

exports[`<Button /> icon with children with icon right should render a button with icon on right 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 dxOYOr"
      color="light.900"
      data-testid="ds-text"
    >
      Button
    </div>
    <svg
      class="Spaceweb__Space-njatzl-0 keYFvM"
      data-testid="ds-icon"
      fill="rgba(255, 255, 255, 1.0)"
      height="20"
      viewBox="0 0 24 24"
      width="20"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> icon without children should render icon only button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 tyMaB Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    data-testid="ds-button"
    type="button"
  >
    <svg
      class="Spaceweb__Space-njatzl-0 jBqZrs"
      data-testid="ds-icon"
      fill="rgba(255, 255, 255, 1.0)"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> size should render a large button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 eFHgXX Flexweb__Flex-ni2cjg-0 dfbkqx"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 dxOYOr"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> size should render a medium(default) button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 dxOYOr"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> size should render a small button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 gkgBsY Sizeweb__Size-sc-10bl685-0 cwUXCl Flexweb__Flex-ni2cjg-0 dfbkqx"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 kbODdW"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> size should render a xsmall button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 hqmUpj Sizeweb__Size-sc-10bl685-0 yoKtN Flexweb__Flex-ni2cjg-0 dfbkqx"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 jFBnpn"
      color="light.900"
      data-testid="ds-text"
    >
      CLICK ME
    </div>
  </button>
</div>
`;

exports[`<Button /> variant should render a primary(default) button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 dxOYOr"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variant should render a secondary button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 inGAXd Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 bOoYmY"
      color="primary.800"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variant should render a tertiary button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 hZNGWL Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 bOoYmY"
      color="primary.800"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variantColor should render a primary button based on provided variantColor 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 hyhPjg Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 dxOYOr"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;
